<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectFragment">

        <Button
            android:id="@+id/button_clean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/button_clean_text"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/purple_500"
            app:strokeColor="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/button_prefill"
            app:layout_constraintEnd_toEndOf="@+id/edittext_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edittext_password"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_prefill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/button_prefill_text"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/purple_500"
            app:strokeColor="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/button_connect"
            app:layout_constraintEnd_toEndOf="@+id/edittext_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edittext_password" />

        <Button
            android:id="@+id/button_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/purple_500"
            app:strokeColor="@color/purple_700"
            android:text="@string/button_connect_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edittext_password"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="@+id/edittext_password" />

        <EditText
            android:id="@+id/edittext_server_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:importantForAutofill="no"
            android:ems="15"
            android:hint="@string/server_uri_text"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_server_uri"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edittext_client_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:importantForAutofill="no"
            android:ems="15"
            android:hint="@string/client_id_text"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_client_id"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:importantForAutofill="no"
            android:ems="15"
            android:hint="@string/username_text"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_username"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:importantForAutofill="no"
            android:ems="15"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_password"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textview_server_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/server_uri_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_client_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/client_id_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_server_uri" />

        <TextView
            android:id="@+id/textview_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_client_id" />

        <TextView
            android:id="@+id/textview_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_username" />

</androidx.constraintlayout.widget.ConstraintLayout>